[package]
name          = "slice"
version       = "0.0.4"
authors       = ["hinaria <a@hinaria.com>"]
description   = "slices for streams implementing `std::io::read` and `std::io::write`."

documentation = "https://docs.hinaria.com/p/slice"
homepage      = "https://code.hinaria.com/p/slice"
repository    = "https://github.com/hinaria/slice"

license       = "MIT/Apache-2.0"
keywords      = ["io", "read", "write", "slice", "seek", "offset", "length", "view", "file", "overlay"]
categories    = ["filesystem"]
readme        = "docs/crates.io/readme.md"

include       = ["src/lib.rs", "Cargo.toml", "docs/crates.io/readme.md"]
